adding export to mysql

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -9,7 +9,8 @@
     "# Import Dependencies\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "import mysql_conn"
+    "import pymysql\n",
+    "pymysql.install_as_MySQLdb()"
    ]
   },
   {
@@ -1734,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1749,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1759,16 +1760,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['BOOKS_AND_REFERENCE', 'SOCIAL', 'TRAVEL_AND_LOCAL', 'GAME',\n",
+       "       'FOOD_AND_DRINK', 'TOOLS', 'FINANCE', 'FAMILY', 'ENTERTAINMENT',\n",
+       "       'PRODUCTIVITY', 'BUSINESS', 'COMMUNICATION', 'SHOPPING',\n",
+       "       'NEWS_AND_MAGAZINES', 'HEALTH_AND_FITNESS', 'SPORTS',\n",
+       "       'MAPS_AND_NAVIGATION', 'EDUCATION', 'LIFESTYLE', 'PHOTOGRAPHY',\n",
+       "       'MEDICAL', 'WEATHER', 'VIDEO_PLAYERS', 'ART_AND_DESIGN'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "apps_merge.g_category.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1800,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,29 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categories = pd.DataFrame(data = {'id':list(range(1, 23)),  \n",
-    "                     'apple':['Reference', 'Social Networking', 'Travel', 'Games',\n",
-    "                              'Food & Drink', 'Utilities', 'Finance', 'Entertainment',\n",
-    "                              'Business', 'Shopping', 'News', 'Photo & Video', 'Productivity',\n",
-    "                              'Navigation', 'Sports', 'Education', 'Health & Fitness',\n",
-    "                              'Lifestyle', 'Medical', 'Weather', 'Book', 'Catalogs'], \n",
-    "                     'google':['BOOKS_AND_REFERENCE', 'SOCIAL', 'TRAVEL_AND_LOCAL', 'GAME',\n",
-    "                               'FOOD_AND_DRINK', 'TOOLS', 'FINANCE', 'FAMILY', 'ENTERTAINMENT',\n",
-    "                               'PRODUCTIVITY', 'BUSINESS', 'COMMUNICATION', 'SHOPPING',\n",
-    "                               'NEWS_AND_MAGAZINES', 'HEALTH_AND_FITNESS', 'SPORTS',\n",
-    "                               'MAPS_AND_NAVIGATION', 'EDUCATION', 'LIFESTYLE', 'PHOTOGRAPHY',\n",
-    "                               'MEDICAL', 'WEATHER', 'VIDEO_PLAYERS', 'ART_AND_DESIGN']})\n",
-    "categories = content_ratings.set_index('id')\n",
-    "categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1825,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2039,7 @@
        "243     TRAVEL_AND_LOCAL  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2223,22 +2219,13 @@
        "243  TRAVEL_AND_LOCAL  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "apps_merge.loc[apps_merge['g_category'] == 'TRAVEL_AND_LOCAL']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#apps_merge.loc[~(apps_merge['a_category'] == apps_merge['g_category'])]"
    ]
   },
   {
@@ -2250,22 +2237,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_string = (\n",
-    "    f\"root:{mysql_conn.password}@localhost/my_db\")\n",
-    "engine = create_engine(f'mysql://{connection_string}')"
+    "#import os\n",
+    "#output_data_file = \"Output/cleanappdata.csv\"\n",
+    "#apps_merge.to_csv(output_data_file, encoding='utf-8', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_sql(\n",
+    "#import mysql.connector\n",
+    "\n",
+    "#mydb = mysql.connector.connect(\n",
+    "#  host=\"localhost\",\n",
+    "#  user=\"root\",\n",
+    "#  passwd=\"yourpassword\"\n",
+    "#)\n",
+    "\n",
+    "#mycursor = mydb.cursor()\n",
+    "\n",
+    "#mycursor.execute(\"CREATE DATABASE apps_db\")\n",
+    "\n",
+    "engine = create_engine(f'mysql://root:password@127.0.0.1/apps_db')\n",
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apps_merge.to_sql(\n",
     "    name='df', con=engine, \n",
     "    if_exists='append', index=True)"
    ]
@@ -2287,7 +2296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
