trimmed data cleaning

--- a/web/data_cleaning.ipynb
+++ b/web/data_cleaning.ipynb
@@ -614,15 +614,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#google.loc[google.g_name.str.contains('eBay')]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -980,8 +971,6 @@
     }
    ],
    "source": [
-    "#print(apple.a_size_mb.unique())\n",
-    "#print(google.g_size_mb.unique())\n",
     "apps_merge.g_size_mb.unique()"
    ]
   },
@@ -1728,27 +1717,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Rename content ratings to match\n",
-    "\n",
-    "# Apple\n",
-    "#apps_merge['a_content_rating'] = apps_merge.a_content_rating.replace('4+', '1')\n",
-    "#apps_merge['a_content_rating'] = apps_merge.a_content_rating.replace('9+', '2')\n",
-    "#apps_merge['a_content_rating'] = apps_merge.a_content_rating.replace('12+', '3')\n",
-    "#apps_merge['a_content_rating'] = apps_merge.a_content_rating.replace('17+', '4')\n",
-    "\n",
-    "# Google\n",
-    "#apps_merge['g_content_rating'] = apps_merge.g_content_rating.replace('Everyone', '1')\n",
-    "#apps_merge['g_content_rating'] = apps_merge.g_content_rating.replace('Everyone 10+', '2')\n",
-    "#apps_merge['g_content_rating'] = apps_merge.g_content_rating.replace('Teen', '3')\n",
-    "#apps_merge['g_content_rating'] = apps_merge.g_content_rating.replace('Mature 17+', '4')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1897,391 +1865,6 @@
    ],
    "source": [
     "apps_merge.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Games', 'Finance', 'Entertainment', 'Shopping', 'News',\n",
-       "       'Productivity', 'Food & Drink', 'Sports', 'Business', 'Travel',\n",
-       "       'Education', 'Social Networking', 'Medical', 'Weather',\n",
-       "       'Photo & Video', 'Lifestyle', 'Book', 'Catalogs', 'Utilities',\n",
-       "       'Health & Fitness'], dtype=object)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.a_category.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['GAME', 'FINANCE', 'FAMILY', 'SHOPPING', 'NEWS_AND_MAGAZINES',\n",
-       "       'PRODUCTIVITY', 'FOOD_AND_DRINK', 'SPORTS', 'BUSINESS',\n",
-       "       'ENTERTAINMENT', 'MAPS_AND_NAVIGATION', 'TRAVEL_AND_LOCAL',\n",
-       "       'EDUCATION', 'SOCIAL', 'MEDICAL', 'LIFESTYLE', 'WEATHER',\n",
-       "       'PHOTOGRAPHY', 'VIDEO_PLAYERS', 'COMMUNICATION',\n",
-       "       'HEALTH_AND_FITNESS', 'ART_AND_DESIGN'], dtype=object)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.g_category.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Games', 'Finance', 'Entertainment', 'Shopping', 'News',\n",
-       "       'Productivity', 'Food & Drink', 'Sports', 'Business', 'Travel',\n",
-       "       'Education', 'Social Networking', 'Medical', 'Weather',\n",
-       "       'Photo & Video', 'Lifestyle', 'Book', 'Catalogs', 'Utilities',\n",
-       "       'Health & Fitness'], dtype=object)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.a_category.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#categories = pd.DataFrame(data = {'id':list(range(1, 23)),  \n",
-    "#                     'apple':['Reference', 'Social Networking', 'Travel', 'Games',\n",
-    "#                              'Food & Drink', 'Utilities', 'Finance', 'Entertainment',\n",
-    "#                              'Business', 'Shopping', 'News', 'Photo & Video', 'Productivity',\n",
-    "#                              'Navigation', 'Sports', 'Education', 'Health & Fitness',\n",
-    "#                              'Lifestyle', 'Medical', 'Weather', 'Book', 'Catalogs'], \n",
-    "#                     'google':['BOOKS_AND_REFERENCE', 'SOCIAL', 'TRAVEL_AND_LOCAL', 'GAME',\n",
-    "#                               'FOOD_AND_DRINK', 'TOOLS', 'FINANCE', 'FAMILY', 'ENTERTAINMENT',\n",
-    "#                               'PRODUCTIVITY', 'BUSINESS', 'COMMUNICATION', 'SHOPPING',\n",
-    "#                               'NEWS_AND_MAGAZINES', 'HEALTH_AND_FITNESS', 'SPORTS',\n",
-    "#                               'MAPS_AND_NAVIGATION', 'EDUCATION', 'LIFESTYLE', 'PHOTOGRAPHY',\n",
-    "#                               'MEDICAL', 'WEATHER', 'VIDEO_PLAYERS', 'ART_AND_DESIGN']})\n",
-    "#categories = content_ratings.set_index('id')\n",
-    "#categories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Games', 'Finance', 'Entertainment', 'Shopping', 'News',\n",
-       "       'Productivity', 'Food & Drink', 'Sports', 'Business', 'Travel',\n",
-       "       'Education', 'Social Networking', 'Medical', 'Weather',\n",
-       "       'Photo & Video', 'Lifestyle', 'Book', 'Catalogs', 'Utilities',\n",
-       "       'Health & Fitness'], dtype=object)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.a_category.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>a_id</th>\n",
-       "      <th>a_size_mb</th>\n",
-       "      <th>a_price</th>\n",
-       "      <th>a_user_rating</th>\n",
-       "      <th>a_content_rating</th>\n",
-       "      <th>a_category</th>\n",
-       "      <th>g_size_mb</th>\n",
-       "      <th>g_price</th>\n",
-       "      <th>g_user_rating</th>\n",
-       "      <th>g_content_rating</th>\n",
-       "      <th>g_category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>DB Navigator</td>\n",
-       "      <td>343555245</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>MAPS_AND_NAVIGATION</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Southwest Airlines</td>\n",
-       "      <td>344542975</td>\n",
-       "      <td>84.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Fly Delta</td>\n",
-       "      <td>388491656</td>\n",
-       "      <td>134.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>46</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>United Airlines</td>\n",
-       "      <td>449945214</td>\n",
-       "      <td>134.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  name       a_id  a_size_mb  a_price  a_user_rating  \\\n",
-       "29        DB Navigator  343555245       80.9      0.0            3.5   \n",
-       "30  Southwest Airlines  344542975       84.7      0.0            3.0   \n",
-       "46           Fly Delta  388491656      134.3      0.0            3.0   \n",
-       "78     United Airlines  449945214      134.4      0.0            2.5   \n",
-       "\n",
-       "   a_content_rating a_category g_size_mb g_price  g_user_rating  \\\n",
-       "29               4+     Travel        20       0            4.0   \n",
-       "30               4+     Travel       8.3       0            3.9   \n",
-       "46               4+     Travel        46       0            3.7   \n",
-       "78               4+     Travel        80       0            3.5   \n",
-       "\n",
-       "   g_content_rating           g_category  \n",
-       "29         Everyone  MAPS_AND_NAVIGATION  \n",
-       "30         Everyone     TRAVEL_AND_LOCAL  \n",
-       "46         Everyone     TRAVEL_AND_LOCAL  \n",
-       "78         Everyone     TRAVEL_AND_LOCAL  "
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.loc[apps_merge['a_category'] == 'Travel']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>a_id</th>\n",
-       "      <th>a_size_mb</th>\n",
-       "      <th>a_price</th>\n",
-       "      <th>a_user_rating</th>\n",
-       "      <th>a_content_rating</th>\n",
-       "      <th>a_category</th>\n",
-       "      <th>g_size_mb</th>\n",
-       "      <th>g_price</th>\n",
-       "      <th>g_user_rating</th>\n",
-       "      <th>g_content_rating</th>\n",
-       "      <th>g_category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Southwest Airlines</td>\n",
-       "      <td>344542975</td>\n",
-       "      <td>84.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>Fly Delta</td>\n",
-       "      <td>388491656</td>\n",
-       "      <td>134.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>46</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.7</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>United Airlines</td>\n",
-       "      <td>449945214</td>\n",
-       "      <td>134.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>4+</td>\n",
-       "      <td>Travel</td>\n",
-       "      <td>80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>Everyone</td>\n",
-       "      <td>TRAVEL_AND_LOCAL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  name       a_id  a_size_mb  a_price  a_user_rating  \\\n",
-       "30  Southwest Airlines  344542975       84.7      0.0            3.0   \n",
-       "46           Fly Delta  388491656      134.3      0.0            3.0   \n",
-       "78     United Airlines  449945214      134.4      0.0            2.5   \n",
-       "\n",
-       "   a_content_rating a_category g_size_mb g_price  g_user_rating  \\\n",
-       "30               4+     Travel       8.3       0            3.9   \n",
-       "46               4+     Travel        46       0            3.7   \n",
-       "78               4+     Travel        80       0            3.5   \n",
-       "\n",
-       "   g_content_rating        g_category  \n",
-       "30         Everyone  TRAVEL_AND_LOCAL  \n",
-       "46         Everyone  TRAVEL_AND_LOCAL  \n",
-       "78         Everyone  TRAVEL_AND_LOCAL  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "apps_merge.loc[apps_merge['g_category'] == 'TRAVEL_AND_LOCAL']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#apps_merge.loc[~(apps_merge['a_category'] == apps_merge['g_category'])]"
    ]
   },
   {
@@ -2458,13 +2041,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sqlite connection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#connection_string = (f\"root:password@localhost/apps_db\")\n",
-    "#engine = create_engine(f'mysql://{connection_string}?charset=utf8')\n",
     "engine = create_engine('sqlite:///apps_db.sqlite')"
    ]
   },
@@ -2490,16 +2078,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#apps_merge_test = apps_merge.drop('a_id', axis = 1)\n",
-    "#apps_merge_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
@@ -2520,15 +2098,6 @@
     "apple_descriptions.to_sql(\n",
     "    name='apple_descriptions', con=engine, \n",
     "    if_exists='replace', index=True, chunksize = 75)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#name_desc = pd.read_sql('SELECT apps.name, app_store_descriptions.app_desc FROM app_store_descriptions INNER JOIN apps ON apps.a_id = app_store_descriptions.id', con = engine)"
    ]
   },
   {
@@ -2629,6 +2198,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MySQL connection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -2642,7 +2218,6 @@
     }
    ],
    "source": [
-    "#type(name_desc)\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "Base = automap_base()\n",
     "# reflect the tables\n",
@@ -2731,20 +2306,6 @@
    "source": [
     "#pd.read_sql('SELECT * FROM apple_description', con = engine).head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
